style.css
body {
    overflow: scroll;
    margin: 0;
    position: relative;
    min-height: 100vh;

    box-shadow: none;

    background-color:#000000;
    color: #dcdee2; /* alt color  #dcdee2;*/
    background-image: url("src/bgimgdark.png");
    background-size:auto;

    /*font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
    font-family: monospace;
    font-weight: bold;

    /* test feature - fade in on page load animation*/
    opacity: 0; /* starts at 0*/
    transition: opacity 1s;
    /* onload action to change opacity to 1 in script.js , window.onload*/
    

}

/* HEADER */
.header {
    color: #fff;
    padding: 10px;
    display: block;
    text-align: center;
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

nav ul li {
    display: inline;
    margin-right: 20px;
}

nav a {
    text-decoration: none;
    color: #fff;
    font-size: 22px;
    margin-top: 0px;
    
    color: #98d6e9;
}

nav {
    margin: 0 auto;
    display: block;
}

.current {
    animation-delay: 0ms;
    color: #FFECD6;
    text-shadow: 0px 0px 25px #F3F8FF;
    
}

.not-current {
    color: #4CB9E7;
    transition: color .2s;
}

.not-current:hover{
    color:#c0e9f6
}

.flicker-anim{
    animation: flicker 2s linear;
}

@keyframes flicker {
	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
        opacity: .99;
	}
	20%, 21.999%, 63%, 63.999%, 65%, 69.999% {
		opacity: 0.4;
	}
}

/* TEXTS */

h1 {
    color: #c0e9f6;
    font-size: 26px;
    margin-left: 1px;
    margin-right: 1px;
    margin-top: 5px;
    margin-bottom: 5px;
    animation-name:glow;
    animation-duration:1s;
    animation-iteration-count:infinite;
    animation-direction:alternate;
}
  
@keyframes glow{
from{text-shadow:0px 0px 8px #ffffff6f,0px 0px 5px #42899fed;}
to{text-shadow:0px 0px 10px #ffffff69,0px 0px 10px #42899fed;}
}

h2 {
    font-size: 20px;
    margin-top: 0px;
    text-shadow: 0px 0px 30px #F3F8FF;
    color: #98d6e9;
}

h3 {
    font-size: 18px;
    margin-top: 0px;
}

p {
    margin: 0px;
    font-size: 16px;
    color: #dcdee2;
}

#description {
    font-size: 18px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;
    margin-top: 6px;
    padding-top: 6px;
    align-items: center;
}

li{
    font-size: 16px;
}

#projects li{
    margin: 5px;
}

/* LINKS */
.link {
    transition: color;
    text-decoration: none;
    color: #dcdee2;
    transition: 300ms;
    text-decoration: underline  ;
}

.link:visited{
    color: #dcdee2; 
}

.link:hover{
    color: orange;
}

.proj{
    color: #dcdee2;
    font-size: 16px;
    transition: text-shadow 300ms;

}

.proj:hover{
    text-shadow: 0px 0px 10px #98d6e9;
}

.proj:visited{
    color: #dcdee2
}

.course{
    color: #dcdee2;
    text-decoration: NONE;
    transition: text-shadow 300ms;
}

.course:hover{
    text-shadow: 0px 0px 10px #98d6e9;
}

.course:visited{
    color: #dcdee2;
}


/* MAIN */

#content-wrap {
    background: inherit;
    padding-bottom: 2.5rem;    /* Footer height */
}

.contents-flexbox{
    display: flex;
    margin: 0 5%;
    
    /* flex-direction: column; use for mobile*/
}

.contents{
    margin: 0 auto;
    flex: 1;
    padding: 10px;
    display:flex; flex-direction:column; gap:20px;
}

#contents2{
    flex: 2;
}

.bg-cont{
    overflow: hidden;
}

.card{
    padding:4%;
    /*background: rgba(3, 13, 18, 0.75);*/
    background-image: url("src/cardbg.png");
    background-repeat: no-repeat;
    background-size: cover;
    border-style: solid;
    border-color: #98d6e9;
    border-radius: 16px;
    box-shadow: inset 0px 0px 10px #428a9fd4, 0px 0px 10px #428a9fd4;
}


.home {
    z-index: 1;
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column;
}


.info {
    display: flex;
    flex-direction: column;
}

.horizontal-div {
    width: 100;
    border-style: solid;
    border-width: 1px;
    border-color: #98d6e9;
    box-shadow: inset 0px 0px 10px #428a9fd4, 0px 0px 10px #428a9fd4;
}

/* BUTTONS */
.buttons{
    display: inline-block;
    padding: 10px 20px;
    margin: 10px 10px;
    text-decoration: none;
    color: #dcdee2;
    background-color: #333;
    border-radius: 5px;
    box-shadow: 0 2px 5px 0px rgba(0, 0, 0, 0.3);
    transition: box-shadow .2s;

}

.buttons:hover {
    box-shadow: 0 5px 12px 0px rgba(0,0,0,.5); 
}

/* IMAGES */
.profile img {
    height: 200px; /* Adjust the width as needed */
    border-radius: 7%;
}

#bg {
    height: screen;
    overflow: hidden;
}


/* FOOTER */
.footer {
    position: absolute;
    font-size: 10px;
    text-align: center;
    bottom: 0;
    width: 100%;
    height: 2.5rem;            /* Footer height */
}

@media only screen and (max-width: 800px) {
    .contents-flexbox{
      flex-direction: column;
    }

    .card {
        width: auto;
    }

    #bg {
        width: auto;
        height: auto;
    }
  }


/* CLOCK */

.clock-container{
    margin: 0 auto;
}

.clock {
    color: #98d6e9;
    font-size: 30px;
    text-shadow: 0px 0px 30px #F3F8FF;
    letter-spacing: 7px;
    margin: 0 auto;
}


/* G5 animation go away */
#lnikaGifedu {
    transition: opacity 1s ease-out;
    opacity: 1;
}

#lnikaGifbooks {
    transition: opacity 1s ease-out;
    opacity: 1;
}

#lnikaGifexp {
    transition: opacity 1s ease-out;
    opacity: 1;
}

